fix(ui): make table scrollable on mobile view

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -6,3 +6,8 @@
     padding: 2rem;
     min-height: 100vh;
 }
+
+.horizontalScroller {
+    overflow-x: auto;
+    width: 100%;
+}
